feat: Migrate Tailwind CSS to local config
Moves Tailwind CSS from CDN to a local configuration file (`tailwind.config.js`) and updates the PostCSS configuration accordingly. This provides a more robust and maintainable styling setup.

--- a/index.html
+++ b/index.html
@@ -12,19 +12,14 @@
     
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    
-    <!-- Tailwind CSS (CDN Mode) -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Load Separated Tailwind Config -->
-    <script src="/tailwind-config.js"></script>
 <script type="importmap">
 {
   "imports": {
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "vite": "https://esm.sh/vite@^7.3.0"
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
